# beeldverwerking-labos

./: .gitignore  README.md
labo1/: CMakeLists.txt
labo1/src/: tibault_damman_opgave1.cpp
labo2/src/: tibault_damman_opgave2.cpp  tibault_damman_opgave3.cpp
labo3/: CMakeLists.txt
labo3/src/: tibault_damman_opgave7.cpp
labo4/: CMakeLists.txt
labo4/src/: tibault_damman_opgave8.cpp  tibault_damman_opgave9.cpp
labo5/: CMakeLists.txt
labo5/src/: tibault_damman_opgave10.cpp  tibault_damman_opgave11.cpp  tibault_damman_opgave12.cpp  tibault_damman_opgave13.cpp
src/labo1/: CMakeLists.txt
src/labo2/: CMakeLists.txt
src/labo2/src/: tibault_damman_opgave2.cpp  tibault_damman_opgave3.cpp  tibault_damman_opgave4.cpp  tibault_damman_opgave5.cpp  tibault_damman_opgave6.cpp
src/labo3/: CMakeLists.txt
src/labo3/src/: tibault_damman_opgave7.cpp
src/labo4/: CMakeLists.txt
src/labo4/src/: tibault_damman_opgave8.cpp
src/labo5/: CMakeLists.txt
